--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -848,7 +848,12 @@ Lim und Dey \cite{Lim2009} kategorisieren mögliche Fragestellungen von Nutzern 
 % gut: kam raus dass datenfluss evtl nicht so klar ist
 % schlecht: 
 
-Abgesehen von allgemeinen Fragestellungen wäre es wichtig zu wissen, ob bestimmte Mashupkonzepte besondere Beachtung finden müssen. Cao et al. \cite{Cao2010} untersuchten mit Hilfe der Thinking Aloud Methode \cite{vanSomeren1994} das Verhalten von Endnutzern, wenn sie Mashups erstellen, sowie deren Debuggingstrategien, wenn etwas nicht funktioniert. Dazu benutzten sie das inzwischen eingestellte Microsoft Popfly. In ihrer Studie hatten alle Probanden Probleme mit dem Konzept des Datenflusses, also welche Daten wann zwischen welchen Komponenten ausgetauscht werden. In VizBoard sollte überlegt werden, den Datenfluss explizit anzuzeigen und damit die \emph{Verständlichkeit} zu verbessern.
+Abgesehen von allgemeinen Fragestellungen wäre es wichtig zu wissen, ob bestimmte Mashupkonzepte besondere Beachtung finden müssen. Cao et al. \cite{Cao2010} untersuchten mit Hilfe der Thinking Aloud Methode \cite{vanSomeren1994} das Verhalten von Endnutzern, wenn sie Mashups erstellen, sowie deren Debuggingstrategien, wenn etwas nicht funktioniert. Dazu benutzten sie das inzwischen eingestellte Microsoft Popfly. In ihrer Studie hatten alle Probanden Probleme mit dem Konzept des Datenflusses, also welche Daten wann zwischen welchen Komponenten ausgetauscht werden. In VizBoard sollte überlegt werden, den Daten- bzw. Kommunikationsfluss explizit anzuzeigen und damit die \emph{Verständlichkeit} zu verbessern.
+
+% inter widget communication
+% überblick, is nix gut oder schlecht
+
+In einem Mashup kommunizieren die beteiligten Komponenten miteinander. Weder ist dieser Vorgang für den Benutzer offensichtlich noch sollte er das Kommunikationsparadigma des Mashups lernen müssen. Chudnovskyy et al. \cite{Chudnovskyy} kategorisieren Probleme und Lösungsansätze, mit deren Hilfe Benutzer die Kommunikation zwischen Komponenten besser wahrnehmen können. Darunter finden sich Self-Descriptive Design, welches visuelle Hinweise und Annotationen verwendet, sowie die Surprise-Explain-Reward Strategie (Überraschung, Erklärung, Belohnung), die zeitgleich mit einem ungewöhnlichen Vorgang eine Erklärung dazu anbietet. Diese beiden Lösungsansätze könnten gut mit einer expliziten Darstellung des Kommunikationsflusses kombiniert werden.
 
 % grammel phd & mental models
 % gut: vorschläge
